SPE-website/pages/static/pages/navbar.css
/* nav {
    background-color: #0D4C92;
    height: 90px;
    font-size: 28px;
}

.navbar-nav > li {
    padding-right: 40px;
} */


/* a.nav-link:hover {
    opacity: 0.8;
} */


/* Dropdown Menu */


/* .dropdown:hover .dropdown-menu {
  display: block;
} */


/* Dropdown Menu */

@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700,800');
@import url('https://fonts.googleapis.com/css?family=Lobster');
html {
    font-size: 62.5%;
}

body {
    font-family: 'Open Sans', sans-serif;
    font-size: 1.6rem;
    font-weight: 400;
}


/* .overlay::after {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    top: 0;
    background-color: rgba(0, 0, 0, .3);
} */

.navbar {
    position: absolute;
    left: 0;
    top: 0;
    padding: 0;
    width: 100%;
    transition: 0.6s ease-in;
    z-index: 99999;
}

.navbar .navbar-brand {
    font-family: 'Lobster', cursive;
    font-size: 2.5rem;
}

.navbar .navbar-toggler {
    position: relative;
    height: 50px;
    width: 50px;
    border: none;
    cursor: pointer;
    outline: none;
}

.navbar .navbar-toggler .menu-icon-bar {
    position: absolute;
    left: 15px;
    right: 15px;
    height: 2px;
    background-color: #fff;
    opacity: 0;
    -webkit-transform: translateY(-1px);
    -ms-transform: translateY(-1px);
    transform: translateY(-1px);
    transition: all 0.3s ease-in;
}

.navbar .navbar-toggler .menu-icon-bar:first-child {
    opacity: 1;
    -webkit-transform: translateY(-1px) rotate(45deg);
    -ms-sform: translateY(-1px) rotate(45deg);
    transform: translateY(-1px) rotate(45deg);
}

.navbar .navbar-toggler .menu-icon-bar:last-child {
    opacity: 1;
    -webkit-transform: translateY(-1px) rotate(135deg);
    -ms-sform: translateY(-1px) rotate(135deg);
    transform: translateY(-1px) rotate(135deg);
}

.navbar .navbar-toggler.collapsed .menu-icon-bar {
    opacity: 1;
}

.navbar .navbar-toggler.collapsed .menu-icon-bar:first-child {
    -webkit-transform: translateY(-7px) rotate(0);
    -ms-sform: translateY(-7px) rotate(0);
    transform: translateY(-7px) rotate(0);
}

.navbar .navbar-toggler.collapsed .menu-icon-bar:last-child {
    -webkit-transform: translateY(5px) rotate(0);
    -ms-sform: translateY(5px) rotate(0);
    transform: translateY(5px) rotate(0);
}

.navbar-dark .navbar-nav .nav-link {
    position: relative;
    color: #fff;
    font-size: 1.6rem;
}

.navbar-dark .navbar-nav .nav-link:focus,
.navbar-dark .navbar-nav .nav-link:hover {
    color: #fff;
}

.navbar .dropdown-menu {
    padding: 0;
    background-color: rgba(0, 0, 0, .9);
}

.navbar .dropdown-menu .dropdown-item {
    position: relative;
    padding: 10px 20px;
    color: #fff;
    font-size: 1.4rem;
    border-bottom: 1px solid rgba(255, 255, 255, .1);
    transition: color 0.2s ease-in;
}

.navbar .dropdown-menu .dropdown-item:last-child {
    border-bottom: none;
}

.navbar .dropdown-menu .dropdown-item:hover {
    background: transparent;
    color: #c0ca33;
}

.navbar .dropdown-menu .dropdown-item::before {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    top: 0;
    width: 5px;
    background-color: #c0ca33;
    opacity: 0;
    transition: opacity 0.2s ease-in;
}

.navbar .dropdown-menu .dropdown-item:hover::before {
    opacity: 1;
}

.navbar.fixed-top {
    position: fixed;
    -webkit-animation: navbar-animation 0.6s;
    animation: navbar-animation 0.6s;
    background-color: rgba(0, 0, 0, .9);
}

.navbar.fixed-top.navbar-dark .navbar-nav .nav-link.active {
    color: #c0ca33;
}

.navbar.fixed-top.navbar-dark .navbar-nav .nav-link::after {
    background-color: #c0ca33;
}

.content {
    padding: 120px 0;
}

@media screen and (max-width: 768px) {
    .navbar-brand {
        margin-left: 20px;
    }
    .navbar-nav {
        padding: 0 20px;
        background-color: rgba(0, 0, 0, .9);
    }
    .navbar.fixed-top .navbar-nav {
        background: transparent;
    }
}

@media screen and (min-width: 767px) {
    .navbar-dark .navbar-nav .nav-link {
        padding: 23px 15px;
    }
    .navbar-dark .navbar-nav .nav-link::after {
        content: '';
        position: absolute;
        bottom: 15px;
        left: 30%;
        right: 30%;
        height: 1px;
        background-color: #fff;
        -webkit-transform: scaleX(0);
        -ms-transform: scaleX(0);
        transform: scaleX(0);
        transition: transform 0.1s ease-in;
    }
    .navbar-dark .navbar-nav .nav-link:hover::after {
        -webkit-transform: scaleX(1);
        -ms-transform: scaleX(1);
        transform: scaleX(1);
    }
    .dropdown-menu {
        min-width: 200px;
        -webkit-animation: dropdown-animation 0.3s;
        animation: dropdown-animation 0.3s;
        -webkit-transform-origin: top;
        -ms-transform-origin: top;
        transform-origin: top;
    }
}

@-webkit-keyframes navbar-animation {
    0% {
        opacity: 0;
        -webkit-transform: translateY(-100%);
        -ms-transform: translateY(-100%);
        transform: translateY(-100%);
    }
    100% {
        opacity: 1;
        -webkit-transform: translateY(0);
        -ms-transform: translateY(0);
        transform: translateY(0);
    }
}

@keyframes navbar-animation {
    0% {
        opacity: 0;
        -webkit-transform: translateY(-100%);
        -ms-transform: translateY(-100%);
        transform: translateY(-100%);
    }
    100% {
        opacity: 1;
        -webkit-transform: translateY(0);
        -ms-transform: translateY(0);
        transform: translateY(0);
    }
}

@-webkit-keyframes dropdown-animation {
    0% {
        -webkit-transform: scaleY(0);
        -ms-transform: scaleY(0);
        transform: scaleY(0);
    }
    75% {
        -webkit-transform: scaleY(1.1);
        -ms-transform: scaleY(1.1);
        transform: scaleY(1.1);
    }
    100% {
        -webkit-transform: scaleY(1);
        -ms-transform: scaleY(1);
        transform: scaleY(1);
    }
}

@keyframes dropdown-animation {
    0% {
        -webkit-transform: scaleY(0);
        -ms-transform: scaleY(0);
        transform: scaleY(0);
    }
    75% {
        -webkit-transform: scaleY(1.1);
        -ms-transform: scaleY(1.1);
        transform: scaleY(1.1);
    }
    100% {
        -webkit-transform: scaleY(1);
        -ms-transform: scaleY(1);
        transform: scaleY(1);
    }
}

.footer-top {
    padding: 60px 0;
    background: #1E3456;
    text-align: left;
    color: #aaa;
}

.footer-top h3 {
    padding-bottom: 10px;
    color: #fff;
}

.footer-about img.logo-footer {
    max-width: 74px;
    margin-top: 0;
    margin-bottom: 18px;
}

.footer-about p a {
    border: 0;
}

.footer-about p a:hover,
.footer-about p a:focus {
    border: 0;
}

.footer-contact p {
    word-wrap: break-word;
}

.footer-contact i {
    padding-right: 10px;
    font-size: 18px;
    color: #666;
}

.footer-contact p a {
    border: 0;
}

.footer-contact p a:hover,
.footer-contact p a:focus {
    border: 0;
}

.footer-links a {
    color: #aaa;
    border: 0;
}

.footer-links a:hover,
.footer-links a:focus {
    color: #fff;
}

.footer-bottom {
    padding: 15px 0 17px 0;
    background: #26416c;
    text-align: left;
    color: #aaa;
}

.footer-social {
    padding-top: 3px;
    text-align: right;
}

.footer-social a {
    margin-left: 20px;
    color: #777;
    border: 0;
}

.footer-social a:hover,
.footer-social a:focus {
    color: #79a05f;
    border: 0;
}

.footer-social i {
    font-size: 24px;
    vertical-align: middle;
}

.footer-copyright {
    padding-top: 5px;
}

.footer-copyright a {
    color: #fff;
    border: 0;
}

.footer-copyright a:hover,
.footer-copyright a:focus {
    color: #aaa;
    border: 0;
}

@media (min-width: 992px) and (max-width: 1199px) {
    .footer-top {
        padding: 40px 0;
    }
}

@media (min-width: 768px) and (max-width: 991px) {
    .footer-top {
        padding: 40px 0;
    }
    .footer-contact i {
        padding-right: 5px;
    }
}

@media (max-width: 767px) {
    .footer-top {
        padding: 40px 0;
        text-align: center;
    }
    .footer-contact i {
        padding-right: 5px;
    }
    .footer-bottom,
    .footer-social {
        text-align: center;
    }
    .footer-social a {
        margin: 0 10px;
    }
}

